--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "homepage" : "http://anthony0030.github.io/techdegree-project-12",
+  "homepage": "http://anthony0030.github.io/techdegree-project-12",
   "name": "techdegree-project-12",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
+    "material-design-icons": "^3.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
