--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "homepage": "http://anthony0030.github.io/techdegree-project-12",
+  "homepage": "https://veaudry.pro",
   "name": "techdegree-project-12",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "gh-pages": "^2.0.0",
     "jquery": "^3.3.1",
     "material-design-icons": "^3.0.1",
     "react": "^16.5.2",
@@ -14,8 +15,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && mv build docs",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {}
 }
