--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Veaudry Portfolio",
+  "name": "Anthony Veaudry's Portfolio",
   "icons": [
   {
    "src": "\/favicon\/android-icon-36x36.png",
