--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.4",
     "bootstrap": "^4.1.3",
     "gh-pages": "^2.0.0",
     "jquery": "^3.3.1",
