apply hack to get the page tol load on all domains
Signed-off-by: Anthony Veaudry <anthony@veaudry.pro>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://veaudry.pro",
+  "homepage": "./",
   "name": "techdegree-project-12",
   "version": "0.1.0",
   "private": true,
