--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "popper.js": "^1.14.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-modal": "^3.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
