--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "ajv": "^6.5.4",
     "bootstrap": "^4.1.3",
     "gh-pages": "^2.0.0",
+    "jest-cli": "^23.6.0",
+    "jest-environment-jsdom": "^23.4.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "react": "^16.5.2",
@@ -23,5 +25,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "prettier": "^1.14.3"
+  }
 }
