--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-modal": "^3.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
