--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "jest-environment-jsdom": "^23.4.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-modal": "^3.6.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
