--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "jquery": "^3.3.1",
     "object-dig": "^0.1.3",
     "popper.js": "^1.14.7",
-    "react": "^16.8.4",
+    "react": "^16.8.6",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^3.0.0",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
