--- a/package.json
+++ b/package.json
@@ -4,22 +4,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "ajv": "^6.5.4",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-flowtype": "^3.13.0",
     "gh-pages": "^2.2.0",
-    "jest-cli": "^24.9.0",
-    "jest-environment-jsdom": "^24.9.0",
-    "jest-haste-map": "^24.9.0",
-    "jest-resolve": "^24.4.0",
-    "jquery": "^3.3.1",
-    "node-sass": "^4.13.0",
+    "jest-cli": "^25.1.0",
+    "jest-environment-jsdom": "^25.1.0",
+    "jest-haste-map": "^25.1.0",
+    "jest-resolve": "^25.1.0",
+    "jquery": "^3.4.1",
+    "node-sass": "^4.13.1",
     "object-dig": "^0.1.3",
-    "popper.js": "^1.16.0",
+    "popper.js": "^1.16.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
-    "reactstrap": "^8.2.0"
+    "react-scripts": "^3.3.1",
+    "reactstrap": "^8.4.1",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
