--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "homepage": "https://anthony0030.github.io/techdegree-project-12",
   "name": "techdegree-project-12",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://anthony0030@github.com/anthony0030/techdegree-project-12.git"
+  },
+  "author": "Anthony Veaudry",
+  "license": "UNLICENSED",
+  "homepage": "https://anthony0030.github.io/techdegree-project-12",
   "dependencies": {
     "bootstrap": "^4.4.1",
     "eslint": "^6.8.0",
