--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "author": "Anthony Veaudry",
   "license": "UNLICENSED",
-  "homepage": "https://anthony0030.github.io/techdegree-project-12",
+  "homepage": "https://veaudry.pro",
   "dependencies": {
     "bootstrap": "^4.5.3",
     "gh-pages": "^3.1.0",
