--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "UNLICENSED",
   "homepage": "https://veaudry.pro",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "bootstrap": "^4.5.3",
     "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
