adds words to dictionary
Signed-off-by: Anthony Veaudry <anthony@veaudry.pro>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,8 +16,10 @@
     "noreferrer",
     "photoshop",
     "phpstorm",
+    "popperjs",
     "postgres",
     "predeploy",
+    "razzle",
     "reactstrap",
     "seqelize",
     "techdegree",
