--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
   "dependencies": {
     "@babel/core": "^7.13.14",
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "@popperjs/core": "^2.9.2",
     "babel-preset-razzle": "^4.0.4",
-    "bootstrap": "^v5.0.0-beta3",
+    "bootstrap": "^v4.6.0",
     "express": "^4.17.1",
     "html-webpack-plugin": "^4.5.2",
+    "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^0.9.0",
     "object-dig": "^0.1.3",
+    "popper.js": "^1.16.1",
     "postcss": "^8.2.9",
     "razzle-dev-utils": "^4.0.4",
     "react": "^17.0.2",
