--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.13.14",
+    "@babel/plugin-syntax-jsx": "^7.12.13",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "babel-preset-razzle": "^4.0.4",
     "bootstrap": "^v4.6.0",
