--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "html-webpack-plugin": "^4.5.2",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^0.9.0",
     "object-dig": "^0.1.3",
     "popper.js": "^1.16.1",
