--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "cSpell.words": [
+    "EPAL",
     "FEWD",
+    "Mesogios",
+    "Thassos",
     "Veaudry",
     "Veaudry's",
     "appcelerator",
@@ -26,6 +29,7 @@
     "seqelize",
     "techdegree",
     "unmount",
+    "unstyled",
     "visualstudio",
     "wordpress"
   ]
