--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-razzle": "^4.0.4",
     "bootstrap": "^v4.6.0",
     "express": "^4.17.1",
+    "html-react-parser": "^1.2.4",
     "html-webpack-plugin": "^4.5.2",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
