--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "razzle-dev-utils": "^4.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-responsive-carousel": "^3.2.18",
+    "react-grid-gallery": "^0.5.5",
     "react-router-dom": "^5.2.0",
     "reactstrap": "^8.9.0",
     "webpack": "^4.46.0",
