--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "license": "UNLICENSED",
   "homepage": "https://veaudry.pro",
   "scripts": {
-    "start": "razzle start",
-    "build": "razzle build",
+    "dev": "razzle start",
+    "build": "razzle build --noninteractive",
     "test": "razzle test --env=jsdom",
-    "start:prod": "NODE_ENV=production node build/server.js",
+    "start": "NODE_ENV=production node build/server.js",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build"
   },
