--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "popper.js": "^1.16.1",
     "postcss": "^8.2.10",
     "razzle-dev-utils": "^4.0.4",
+    "razzle-heroku": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-grid-gallery": "^0.5.5",
