--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "techdegree-project-12",
   "version": "2.0.0",
   "engines": {
-    "node": "8.1.x",
-    "npm": "5.4.0",
-    "yarn": "0.28.4"
+    "node": "15.2.1",
+    "npm": "7.5.6",
+    "yarn": "1.22.5"
   },
   "repository": {
     "type": "git",
