--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@babel/plugin-syntax-jsx": "^7.12.13",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "babel-preset-razzle": "^4.0.4",
-    "bootstrap": "^v4.6.0",
+    "bootstrap": "^4.6.0",
     "express": "^4.17.1",
     "html-react-parser": "^1.2.5",
     "html-webpack-plugin": "^5.3.1",
