--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "object-dig": "^0.1.3",
     "popper.js": "^1.16.1",
     "postcss": "^8.2.10",
+    "razzle": "^3.3.13",
     "razzle-dev-utils": "^4.0.4",
     "razzle-heroku": "^3.0.0",
     "react": "^17.0.2",
@@ -43,9 +44,9 @@
     "react-grid-gallery": "^0.5.5",
     "react-router-dom": "^5.2.0",
     "reactstrap": "^8.9.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.32.0",
-    "webpack-dev-server": "^3.11.2",
-    "razzle": "^3.3.13"
+    "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
