updates eslint and lints
Signed-off-by: Anthony Veaudry <anthony@veaudry.pro>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
     "inkscape",
     "krakenjs",
     "laravel",
+    "mozbrowser",
     "nginx",
     "noopener",
     "noreferrer",
@@ -26,10 +27,12 @@
     "predeploy",
     "razzle",
     "reactstrap",
+    "scanjs",
     "seqelize",
     "shirtsbymike",
     "techdegree",
     "unmount",
+    "unsanitized",
     "unstyled",
     "visualstudio",
     "wordpress"
